--- a/ZCups/ZCups/ZCups.csproj
+++ b/ZCups/ZCups/ZCups.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="singleton.cs" />
     <Compile Include="Sube.cs" />
     <EmbeddedResource Include="DrinkSelection.resx">
       <DependentUpon>DrinkSelection.cs</DependentUpon>
