--- a/ZCups/ZCups/ZCups.csproj
+++ b/ZCups/ZCups/ZCups.csproj
@@ -45,6 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminEntry.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminEntry.Designer.cs">
+      <DependentUpon>AdminEntry.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminPage.Designer.cs">
+      <DependentUpon>AdminPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Coffee.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="Decorator.cs" />
@@ -54,9 +66,7 @@
     <Compile Include="DrinkSelection.Designer.cs">
       <DependentUpon>DrinkSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Form1.cs" />
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
@@ -64,6 +74,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="singleton.cs" />
     <Compile Include="Sube.cs" />
+    <EmbeddedResource Include="AdminEntry.resx">
+      <DependentUpon>AdminEntry.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminPage.resx">
+      <DependentUpon>AdminPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DrinkSelection.resx">
       <DependentUpon>DrinkSelection.cs</DependentUpon>
     </EmbeddedResource>
